Små ændringer og oprydning i filer

--- a/solar_app_html/static/index.html
+++ b/solar_app_html/static/index.html
@@ -2657,7 +2657,7 @@
     .on('markgeocode', function(e) {
       const latlng = e.geocode.center;
 
-      setSelected(latlng.lat, latlng.lng);  // your existing function
+      setSelected(latlng.lat, latlng.lng); 
       map.setView(latlng, 15);
 
       if (marker) marker.setLatLng(latlng);
